--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-minify": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-tap": "^1.0.1",
