--- a/package.json
+++ b/package.json
@@ -10,31 +10,21 @@
   "author": "Robert P Cunningham",
   "license": "ISC",
   "dependencies": {
-    "@slack/client": "^3.8.1",
-    "aws-sdk": "^2.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
-    "engine.io": "^2.0.2",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.0",
-    "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-minify": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-tap": "^1.0.1",
     "gulp-uglify": "^3.0.0",
-    "keystone": "^4.0.0-beta.5",
-    "keystone-storage-adapter-s3": "^1.1.1",
-    "mdi": "^1.8.36",
-    "primus": "^6.1.0",
-    "request": "^2.79.0",
+    "html-minifier": "^3.5.3",
     "serve-favicon": "^2.4.3",
-    "socket.io": "^1.7.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
